# fighters-legacy

./: .gitignore  AUTHORS  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GOVERNANCE.md  README.md  REUSE.toml  SECURITY.md  SUPPORT.md  TRADEMARK.md
engine/: CMakeLists.txt
engine/ai/: AiControllerFactory.h  BreakTurnController.cpp  BreakTurnController.h  CMakeLists.txt  EvadeController.cpp  EvadeController.h  Guidance.h  HighYoYoController.cpp  HighYoYoController.h  ImmelmannController.cpp  ImmelmannController.h  LagPursuitController.cpp  LagPursuitController.h  LeadPursuitController.cpp  LeadPursuitController.h  LoiterController.cpp  LoiterController.h  LowYoYoController.cpp  LowYoYoController.h  PursuitController.cpp  PursuitController.h  SplitSController.cpp  SplitSController.h  WaypointController.cpp  WaypointController.h
engine/audio/: MusicManager.cpp  MusicManager.h  OggDecoder.cpp  OggDecoder.h  PlaylistLoader.cpp  PlaylistLoader.h  SubtitleQueue.cpp  SubtitleQueue.h  VoiceCalloutManager.cpp  VoiceCalloutManager.h
engine/config/: AccessibilitySettings.h  AudioSettings.h  ClientSettings.h  ConfigFile.cpp  ConfigFile.h  ControlsSettings.h  DebugSettings.h  DifficultySettings.h  GraphicsSettings.h  HudSettings.h  PilotSettings.h  PredictionSettings.h  UserConfig.cpp  UserConfig.h
engine/console/: CommandRegistry.cpp  CommandRegistry.h  CommandShell.cpp  CommandShell.h  ConsoleCommands.cpp  ConsoleCommands.h  GameConsole.cpp  GameConsole.h
engine/content/: AssetManager.cpp  AssetManager.h  AssetTypes.h  AssetValidator.cpp  AssetValidator.h  FolderContentPack.cpp  FolderContentPack.h  IContentPack.h  IContentPackEventHandler.h  ModLoader.cpp  ModLoader.h  TrustLevel.h
engine/crash/: CMakeLists.txt  CrashInfo.h  CrashReporter.cpp  CrashReporter.h
engine/debug/: DebugCommands.cpp  DebugCommands.h
engine/difficulty/: DifficultyMultipliers.cpp  DifficultyMultipliers.h
engine/entity/: EntityManager.cpp  EntityManager.h  EntityPool.cpp  EntityPool.h  EntityState.h  IEntityController.h
engine/firstrun/: FirstRun.cpp  FirstRun.h
engine/flight/: AeroForces.cpp  AeroForces.h  BuiltinFlightModel.h  FlightIntegrator.cpp  FlightIntegrator.h  IGravityField.h
engine/i18n/: Localization.cpp  Localization.h  StringTable.cpp  StringTable.h
engine/input/: InputBindings.cpp
engine/job/: JobSystem.cpp  JobSystem.h
engine/loop/: GameLoop.cpp  GameLoop.h  GameState.h  ISimUpdate.h  TimeController.cpp  TimeController.h  TimeRate.h
engine/net/: AckWindow.h  BitStream.h  CongestionController.cpp  CongestionController.h  DiscoveryBeacon.cpp  DiscoveryBeacon.h  DiscoveryListener.cpp  DiscoveryListener.h  GameProtocol.h  JitterBuffer.h  NetworkUtils.cpp  NetworkUtils.h  Quantization.h  SnapshotCodec.cpp  SnapshotCodec.h  WorldBroadcaster.cpp  WorldBroadcaster.h
engine/perf/: PerformanceOverlay.cpp  PerformanceOverlay.h
engine/render/: BuiltinGeometry.cpp  CameraController.cpp  CameraController.h  FlightHud.cpp  FlightHud.h  IHud.h  RenderSnapshot.h  SceneRenderer.cpp  SceneRenderer.h  SimRenderBridge.cpp  SimRenderBridge.h  TerrainMeshBuilder.cpp  TerrainMeshBuilder.h  TerrainStreamer.cpp  TerrainStreamer.h  WindshieldRain.cpp  WindshieldRain.h
engine/sandbox/: SandboxInspector.cpp  SandboxInspector.h
engine/script/: LuaController.cpp  LuaController.h  LuaSandbox.cpp  LuaSandbox.h
engine/spatial/: SpatialIndex.cpp  SpatialIndex.h
engine/weather/: WeatherController.cpp  WeatherTypes.h
engine/world/: AirspaceZone.h  AlertLevel.h  CMakeLists.txt  FactionDef.h  FactionRegistry.cpp  FactionRegistry.h
game/fighters-legacy/: CMakeLists.txt  CameraInput.cpp  CameraInput.h  ClientNetEventHandler.cpp  ClientNetEventHandler.h  ClientPrediction.cpp  ClientPrediction.h  ConnectArgs.h  DebriefScreen.cpp  DebriefScreen.h  FlightInputCollector.cpp  FlightInputCollector.h  FlightScreen.cpp  FlightScreen.h  Game.cpp  Game.h  GameHud.cpp  GameHud.h  HapticController.cpp  HapticController.h  IScreen.h  LoadingScreen.cpp  LoadingScreen.h  LocalServer.cpp  LocalServer.h  MainMenuScreen.cpp  MainMenuScreen.h  MissionBriefScreen.cpp  MissionBriefScreen.h  MissionSelectScreen.cpp  MissionSelectScreen.h  PauseMenuScreen.cpp  PauseMenuScreen.h  PrecipitationController.h  ScreenManager.cpp  ScreenManager.h  ServerNotice.h  SessionStatus.h  SettingsScreen.cpp  SettingsScreen.h  (+1 more)
platform/: CMakeLists.txt  FileLogger.cpp  FileLogger.h  IAsyncFilesystem.h  IAudio.h  IAudioSynthesizer.h  ICursor.h  IDisplay.h  IFilesystem.h  IFilesystemWatcher.h  IInput.h  IJoystick.h  ILogger.h  INetwork.h  IRenderer.h  IWindow.h  IWindowEventHandler.h  Platform.h  RenderTypes.h  StdoutLogger.h  Subprocess.cpp  Subprocess.h
platform/net/: CMakeLists.txt  ENetNetwork.cpp  ENetNetwork.h  ENetNetworkFactory.cpp  ENetNetworkFactory.h  GnsNetwork.cpp  GnsNetwork.h  GnsNetworkFactory.cpp  GnsNetworkFactory.h  NetworkFactory.cpp  NetworkFactory.h
platform/openal/: CMakeLists.txt  OALAudio.cpp  OALAudio.h  OALAudioFactory.cpp  (+1 more)
tests/: CMakeLists.txt  mock_content.h  mock_hal.h  mock_network.h  test_ack_window.cpp  test_admin_console.cpp  test_aero_forces.cpp  test_ai_controllers.cpp  test_asset_validator.cpp  test_async_filesystem.cpp  test_async_filesystem_sdl3.cpp  test_audio.cpp  test_bot_swarm.cpp  test_bridge.cpp  test_central_gravity.cpp  test_client_net_event_handler.cpp  test_client_prediction.cpp  test_command_shell.cpp  test_config_file.cpp  test_congestion_controller.cpp  test_connect_args.cpp  test_content_system.cpp  test_crash_reporter.cpp  test_cursor.cpp  test_debrief_screen.cpp  test_debug_console.cpp  test_difficulty.cpp  test_display.cpp  test_entity.cpp  test_entity_scale.cpp  test_faction_registry.cpp  test_file_logger.cpp  test_firstrun.cpp  test_flight_hud.cpp  test_flight_input_collector.cpp  test_flight_integrator.cpp  test_force_model.cpp  test_game_console.cpp  test_game_protocol.cpp  test_gen_terrain_chunks.py  (+56 more)
tools/: CMakeLists.txt  blender_gen.py  check_deps.py  gen_builtin_glb.py  gen_terrain_chunks.py  gen_unifont_header.py  tsan.supp
(+149 files in other folders)
